--- a/main.html
+++ b/main.html
@@ -7,7 +7,11 @@
 </head>
 
 <body>
+	<div>
+		
+	<a href="https://youtu.be/DCf8_0dtfMg">My current favourite song is lolipop lagelu</a>
 	<!-- the entire body must be written by student -->
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
